Fri Jan 25 2002  Vitezslav Samel <samel@mail.cz>
	* termcap.c:
	strcmp() can return values other than -1/0/+1 (fix supplied by
	Schermann Gabor <gaborsch@mailbox.hu>)

Sat Jan 19 2002  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	don't use markb and markk after they are freed (fixes segfault)

Sun Jan 13 2002  Vitezslav Samel <samel@mail.cz>
	* regex.c:
	fix char escaping in \+ case

Sat Jan 12 2002  Vitezslav Samel <samel@mail.cz>
	* help.c, types.h:
	get back context help (vanished in cleaning patch to help by marx_sk)
	(context help is now only used in search prompt window)

Tue Jan  8 2002  Vitezslav Samel <samel@mail.cz>
	* vs.c, vs.h:
	change sELEMENT #define to typedef

Mon Jan  7 2002  Vitezslav Samel <samel@mail.cz>
	* acinclude.m4, configure.ac, tty.c, umath.c, ushell.c, utils.c,
	utils.h:
	cleanup signals handling (sigaction() / sigvec() / signal())

Sun Jan  6 2002  Vitezslav Samel <samel@mail.cz>
	* cmd.c:
	correct "negated macro" for nbuf/pbuf macros

Fri Dec 14 2001  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.8-pre1 ***

Fri Dec 14 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, NEWS:
	prepare for -pre release; bump up version to 2.9.8-pre1

Fri Dec 14 2001  Vitezslav Samel <samel@mail.cz>
	* Makefile.am:
	add types.h into distribution package

Wed Dec 12 2001  Vitezslav Samel <samel@mail.cz>
	* acinclude.m4, configure.ac:
	use our own joe_SETPGRP macro (autoconf's is broken for *BSD)

Tue Dec 11 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, path.c:
	include <limits.h> if available to get PATH_MAX

Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, cmd.c, hash.c, help.c, kbd.c, macro.c, menu.c, pw.c,
	queue.c, qw.c, rc.c, scrn.c, tab.c, termcap.c, tty.c, tw.c, ufile.c,
	uformat.c, uisrch.c, umath.c, undo.c, usearch.c, utils.c, utils.h,
	va.c, vfile.c, vs.c, w.c:
	prepare memory allocation functions (change (m|re|c)alloc() and free()
	into joe_(m|re|c)alloc() and joe_free()) in the utils.c for further
	checking
